# ChangeLog for dev-libs/keybinder
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/ChangeLog,v 1.13 2012/11/08 19:25:04 blueness Exp $

  08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
  keybinder-0.3.0-r200.ebuild:
  keyword ~ppc ~ppc64, bug #437156

  26 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  keybinder-0.3.0-r200.ebuild:
  keyword ~mips

  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -keybinder-0.2.2.ebuild:
  old

  16 Oct 2012; Markus Meier <maekke@gentoo.org> keybinder-0.3.0-r200.ebuild:
  add ~arm, bug #437156

  18 Aug 2012; Johannes Huber <johu@gentoo.org> keybinder-0.3.0-r200.ebuild,
  keybinder-0.3.0-r300.ebuild:
  Stable for x86, wrt bug #428954

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> keybinder-0.3.0-r300.ebuild:
  Stable for amd64, wrt bug #428954

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> keybinder-0.3.0-r200.ebuild:
  Stable for amd64, wrt bug #428954

*keybinder-0.3.0-r300 (27 Jun 2012)
*keybinder-0.3.0-r200 (27 Jun 2012)

  27 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  +keybinder-0.3.0-r200.ebuild, +keybinder-0.3.0-r300.ebuild, metadata.xml:
  Version bump with new GTK+-3 based SLOT.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> keybinder-0.2.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  keybinder-0.2.2.ebuild:
  Use correct slot of pygobject.

  22 Mar 2011; Thomas Kahle <tomka@gentoo.org> keybinder-0.2.2.ebuild:
  x86 stable per bug 358407

  13 Mar 2011; Markos Chandras <hwoarang@gentoo.org> keybinder-0.2.2.ebuild:
  Stable on amd64 wrt bug #358407

*keybinder-0.2.2 (30 Sep 2010)

  30 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +keybinder-0.2.2.ebuild:
  Initial commit.