@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/keybinder-0.3.0-r200.ebuild,v 1.6 2012/11/08 19:25:04 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/keybinder-0.3.0-r200.ebuild,v 1.7 2012/11/13 17:57:18 jer Exp $
 
 EAPI=4
 
@@ -14,7 +14,7 @@ SRC_URI="http://kaizer.se/publicfiles/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~mips ~ppc ~ppc64 x86"
+KEYWORDS="amd64 ~arm ~hppa ~mips ~ppc ~ppc64 x86"
 IUSE="+introspection lua python"
 
 RDEPEND=">=x11-libs/gtk+-2.20:2
