@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/keybinder-0.3.0-r300.ebuild,v 1.3 2012/08/18 23:31:25 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/keybinder-0.3.0-r300.ebuild,v 1.4 2012/11/13 17:57:18 jer Exp $
 
 EAPI=4
 inherit eutils
@@ -13,7 +13,7 @@ SRC_URI="http://kaizer.se/publicfiles/${PN}/${MY_P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="3"
-KEYWORDS="amd64 x86"
+KEYWORDS="amd64 ~hppa x86"
 IUSE="+introspection"
 
 RDEPEND="x11-libs/gtk+:3
