@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/keybinder
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/ChangeLog,v 1.13 2012/11/08 19:25:04 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/keybinder/ChangeLog,v 1.14 2012/11/13 17:57:18 jer Exp $
+
+  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> keybinder-0.3.0-r200.ebuild,
+  keybinder-0.3.0-r300.ebuild:
+  Marked ~hppa (bug #437156).
 
   08 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
   keybinder-0.3.0-r200.ebuild:
